[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/structure/anchored_tw.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Nafees-font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/structure/main-menu.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Nafees-half.tres" type="DynamicFont" id=4]

[node name="main-menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": "Why I didn't just use a ColorRect for this is beyond me"
}

[node name="Anchored" type="TextureRect" parent="."]
margin_left = 320.0
margin_top = 50.0
margin_right = 1600.0
margin_bottom = 306.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Start" type="Button" parent="Main"]
margin_left = 817.0
margin_top = 469.0
margin_right = 1103.0
margin_bottom = 611.0
custom_fonts/font = ExtResource( 2 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Main"]
margin_left = 734.5
margin_top = 675.708
margin_right = 1185.5
margin_bottom = 817.708
custom_fonts/font = ExtResource( 2 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Main"]
margin_left = 852.0
margin_top = 900.0
margin_right = 1068.0
margin_bottom = 1042.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolume" type="HSlider" parent="Settings"]
margin_left = 743.929
margin_top = 557.369
margin_right = 1176.93
margin_bottom = 649.369
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="HSlider" parent="Settings"]
margin_left = 743.929
margin_top = 699.369
margin_right = 1176.93
margin_bottom = 791.369
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeLabel" type="RichTextLabel" parent="Settings"]
margin_left = 807.142
margin_top = 518.36
margin_right = 1113.14
margin_bottom = 594.36
custom_fonts/normal_font = ExtResource( 4 )
text = "Master Volume"

[node name="MusicVolumeLabel" type="RichTextLabel" parent="Settings"]
margin_left = 823.728
margin_top = 660.36
margin_right = 1093.73
margin_bottom = 736.36
custom_fonts/normal_font = ExtResource( 4 )
text = "Music Volume"

[node name="Back" type="Button" parent="Settings"]
margin_left = 823.728
margin_top = 371.975
margin_right = 1076.73
margin_bottom = 513.975
custom_fonts/font = ExtResource( 2 )
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Main/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Main/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Main/Quit" to="." method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="Settings/MasterVolume" to="." method="_on_MasterVolume_value_changed"]
[connection signal="value_changed" from="Settings/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_Back_pressed"]
